--- a/style.css
+++ b/style.css
@@ -96,12 +96,10 @@ body {
 }
 
 .myRecentWork {
-  text-align: center;
-  margin: 5%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 24px;
+  margin: 22px;
+    display: grid;
+    gap: 24px;
+    justify-items: center;
 }
 
 .titleWorkBlue {
@@ -307,7 +305,8 @@ body {
   right: 0;
 }
 
-h3 {
+.subtitle {
+  text-align: center;
   font-size: 24px;
   font-weight: 600;
   font-family: "inter", sans-serif;
