--- a/style.css
+++ b/style.css
@@ -306,9 +306,136 @@ body {
 }
 
 .subtitle {
-  text-align: center;
+  text-align: cente;
   font-size: 24px;
   font-weight: 600;
   font-family: "inter", sans-serif;
   color: #3a4a42;
+}
+
+.containerThirdTittle {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.ThirdTittle {
+  align-items: center;
+  text-align: center;
+  margin: 5% 5% 5% 5%;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172b4d;
+  width: 327px;
+  height: 363px;
+}
+
+.finishForm {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  margin: 10% 5% 5% 5%;
+}
+
+.inputText {
+  text-indent: 7px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  height: 48px;
+  border-radius: 4px;
+  border: 1px solid #d0d9d4;
+}
+
+.inputEmail {
+  text-indent: 7px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  height: 48px;
+  border-radius: 4px;
+  border: 1px solid #d0d9d4;
+}
+
+.finalTextarea {
+  text-indent: 7px;
+  border: 1px solid #60c095;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.finalTextarea::-webkit-resizer {
+  background-image: url(./textareaHandle.svg);
+  background-repeat: no-repeat;
+  background-size: 13px 13px;
+  background-position: center;
+}
+
+.finalButton {
+  align-self: center;
+  background-color: #36b37e;
+  size: 17px;
+  width: 129px;
+  height: 48px;
+  border: none;
+  border-radius: 4px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  color: white;
+  text-align: center;
+}
+
+.finalSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 2%;
+}
+
+.finalContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  width: 80%;
+  padding: 0;
+  justify-content: space-evenly;
+}
+
+.finalList {
+  list-style: none;
+  display: list-item;
+  align-items: baseline;
+}
+
+.finalEmail {
+  color: #42526e;
+  height: 189px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 32px;
+  margin-top: 0%;
+}
+
+.finalSeparador {
+  width: 130px;
+  height: 5px;
+  background-color: #3a4a42;
+  border: none;
+  border-radius: 10px;
 }
