--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body {
   background-color: rgb(255, 255, 255);
-  background-image: url("./header-illsutration-mobile@2x.svg");
   background-size: contain;
   background-position-y: 100px;
   background-repeat: no-repeat;
   margin: 0%;
+}
+
+.imgBackground img {
+  width: 105%;
+  height: 100%;
+  z-index: -10;
+  position: absolute;
+  margin: -9% 0% 0% -50%;
 }
 
 .container ul {
@@ -25,30 +32,38 @@ body {
   font-style: normal;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 28px;
   text-align: center;
+}
+
+.textcenter {
+  padding: 0% 24px;
 }
 
 .tittleContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  margin: 10%;
+  background-image: url(/header-illsutration-mobile@2x.svg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-position: center center;
+  background-size: cover;
+  justify-content: center;
 }
 
 .tittleContainer p {
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 28px;
 }
 
 .tittleContainer h1 {
   text-align: center;
-  font-size: 40px;
+  font-size: 2.5rem;
   font-style: normal;
   font-family: 'Inter', sans-serif;
   line-height: 52px;
@@ -93,6 +108,7 @@ body {
   margin-right: auto;
   display: block;
   width: 10%;
+  margin-top: 64px;
 }
 
 .myRecentWork {
@@ -102,9 +118,14 @@ body {
   justify-items: center;
 }
 
+.cardGrid {
+  display: grid;
+  gap: 24px;
+}
+
 .titleWorkBlue {
   font-family: "inter", sans-serif;
-  font-size: 40px;
+  font-size: 2.5rem;
   color: #172b4d;
   font-weight: 700;
 }
@@ -139,6 +160,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  flex-wrap: wrap;
 }
 
 .myRecentWorkItem {
@@ -148,7 +170,7 @@ body {
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 16px;
   width: max-content;
 }
@@ -161,7 +183,7 @@ body {
   border-radius: 4px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-size: 17px;
+  font-size: 1.06rem;
   font-weight: 500;
   line-height: 24px;
   color: white;
@@ -169,10 +191,6 @@ body {
 }
 
 .buttongreen:hover {
-  transform: scale(1.2);
-}
-
-.button:hover {
   transform: scale(1.2);
 }
 
@@ -192,7 +210,7 @@ body {
   margin: 0% 5% 5% 5%;
   text-align: center;
   line-height: 32px;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .buttonResume {
@@ -204,7 +222,7 @@ body {
   border-radius: 4px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-size: 17px;
+  font-size: 1.06rem;
   font-weight: 500;
   line-height: 24px;
   color: white;
@@ -212,7 +230,7 @@ body {
 }
 
 .buttonResume:hover {
-  transform: scale(1.2);
+  transform: scale(1.3);
 }
 
 .aboutMe {
@@ -271,12 +289,12 @@ body {
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 16px;
 }
 
 .blueTitle {
-  font-size: 40px;
+  font-size: 2.5rem;
   font-weight: 700;
 }
 
@@ -289,6 +307,18 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.postOne {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-end;
+}
+
+.cardGridOne {
+  display: grid;
+  gap: 24px;
 }
 
 .separator {
@@ -306,8 +336,8 @@ body {
 }
 
 .subtitle {
-  text-align: cente;
-  font-size: 24px;
+  text-align: center;
+  font-size: 1.5rem;
   font-weight: 600;
   font-family: "inter", sans-serif;
   color: #3a4a42;
@@ -327,11 +357,10 @@ body {
   margin: 5% 5% 5% 5%;
   font-family: 'Inter', sans-serif;
   font-weight: 700;
-  font-size: 40px;
   line-height: 52px;
   color: #172b4d;
-  width: 327px;
-  height: 363px;
+  width: 20.4rem;
+  height: 22.6rem;
 }
 
 .finishForm {
@@ -347,7 +376,6 @@ body {
   text-indent: 7px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 15px;
   height: 48px;
   border-radius: 4px;
   border: 1px solid #d0d9d4;
@@ -355,9 +383,8 @@ body {
 
 .inputEmail {
   text-indent: 7px;
-  font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 15px;
+  font-family: 'Inter', sans-serif;
   height: 48px;
   border-radius: 4px;
   border: 1px solid #d0d9d4;
@@ -370,7 +397,7 @@ body {
   border-radius: 4px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 0.9rem;
 }
 
 .finalTextarea::-webkit-resizer {
@@ -390,7 +417,7 @@ body {
   border-radius: 4px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-size: 17px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 24px;
   color: white;
@@ -426,7 +453,7 @@ body {
   height: 189px;
   font-family: 'Inter', sans-serif;
   font-weight: 400px;
-  font-size: 20px;
+  font-size: 1.2rem;
   text-align: center;
   line-height: 32px;
   margin-top: 0%;
@@ -438,4 +465,200 @@ body {
   background-color: #3a4a42;
   border: none;
   border-radius: 10px;
+}
+
+.containerDesktopUl {
+  display: flex;
+  justify-content: center;
+}
+
+.unlistbar {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  width: 17rem;
+  padding: 0;
+}
+
+/*
+tablet
+*/
+@media (min-width: 768px) {
+  .container,
+  header {
+    display: none;
+  }
+
+  .containerDesk {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+  }
+
+  .tittleContainer {
+    margin-top: 0%;
+    font-family: 'Inter', sans-serif;
+    background-image: url(/imgdesktopversion/Header-llustration-desktop.svg);
+  }
+
+  .imgOneMovil {
+    display: none;
+  }
+
+  .welcome {
+    padding: 0 20px;
+  }
+
+  .tittleContainer p {
+    padding: 0 70px;
+    margin-top: 0;
+  }
+
+  .mediaContainer {
+    width: 29%;
+  }
+
+  .cardGrid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .cardGridOne {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .skillsItem {
+    margin: 22px;
+    display: grid;
+    gap: 24px;
+    justify-items: center;
+  }
+
+  .aboutMeCard {
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 11px;
+    margin-bottom: 5%;
+    border: solid 1px #d0d9d4;
+    background-color: #ebf0ee;
+    border-radius: 10px 10px 10px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+
+  .containerThirdTittleForm {
+    margin: 24px;
+  }
+
+  .formThirdTittle {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+  }
+
+  .formThirdTittle > h2 {
+    align-self: center;
+    min-width: -webkit-fill-available;
+    padding-top: 25%;
+  }
+
+  .inputText,
+  .inputTextLast {
+    box-sizing: border-box;
+    width: 100%;
+    grid-column: span 1;
+    border: 1px solid #d0d9d4;
+    text-indent: 6px;
+  }
+
+  .inputEmail {
+    box-sizing: border-box;
+    width: 100%;
+    grid-column: span 2;
+  }
+
+  .finalTextarea {
+    box-sizing: border-box;
+    width: 100%;
+    grid-column: span 2;
+  }
+
+  .containerThirdTittle {
+    place-self: center;
+    width: 400%;
+    height: 200%;
+    margin: 0%;
+  }
+
+  .finalButton {
+    align-self: self-start;
+  }
+
+  .finishForm {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .finalEmail {
+    display: none;
+  }
+
+  .finalContainer {
+    width: 30%;
+  }
+
+  .finalSeparador {
+    display: none;
+  }
+
+  .pilarRight {
+    position: absolute;
+    right: -21px;
+    z-index: -1;
+    width: 15%;
+    height: 20%;
+    align-self: center;
+  }
+
+  .cubeFinalLeft {
+    position: absolute;
+    left: 0;
+    z-index: -2;
+    width: 17%;
+    align-self: center;
+    height: 341px;
+  }
+}
+
+/*
+tablet
+*/
+@media (max-width: 767px) {
+  .containerDesk {
+    display: none;
+  }
+
+  .imgTwoDesk {
+    display: none;
+  }
+
+  .inputTextLast {
+    display: none;
+  }
+
+  .pilarRight {
+    display: none;
+  }
+
+  .cubeFinalLeft {
+    display: none;
+  }
+
+  .ThirdTittle {
+    align-items: center;
+    width: fit-content;
+    line-height: 3;
+  }
 }
