--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ body {
 .ThirdTittle {
   align-items: center;
   text-align: center;
-  margin: 5% 5% 5% 5%;
+  margin: 5% 5% 5% 10%;
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   line-height: 52px;
@@ -545,8 +545,7 @@ tablet
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    
   }
 
   .containerThirdTittleForm {
@@ -554,6 +553,7 @@ tablet
   }
 
   .formThirdTittle {
+    margin: 0 140px;
     display: grid;
     grid-template-columns: 2fr 3fr;
   }
