--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("/headerillsutrationmobile@2x.svg");
+  background-image: url("./headerillsutrationmobile@2x.svg");
   background-repeat: no-repeat;
   height: 100vh;
   background-position: center center;
@@ -252,7 +252,7 @@ body {
   gap: 24px;
   justify-items: center;
   align-items: center;
-  background-image: url("images/illustration-\ about\ me-\ mobile.png");
+  background-image: url("./images/illustration-\ about\ me-\ mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -521,7 +521,7 @@ tablet
   .tittleContainer {
     margin-top: 0%;
     font-family: 'Inter', sans-serif;
-    background-image: url("/imgdesktopversion/Header-llustration-desktop.svg");
+    background-image: url("./imgdesktopversion/Header-llustration-desktop.svg");
   }
 
   .imgOneMovil {
