--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(/header-illsutration-mobile@2x.svg);
+  background-image: url("./header-illsutration-mobile@2x.svg");
   background-repeat: no-repeat;
   height: 100vh;
   background-position: center center;
@@ -203,7 +203,7 @@ body {
 }
 
 .containerAboutMe {
-  background-image: url(./illustration\ 2-about\ me\ mobile.svg);
+  background-image: url("./illustration\ 2-about\ me\ mobile.svg");
   background-repeat: no-repeat;
   background-position-y: bottom;
   padding-bottom: 15px;
@@ -248,7 +248,7 @@ body {
   gap: 24px;
   justify-items: center;
   align-items: center;
-  background-image: url("images/illustration-\ about\ me-\ mobile.png");
+  background-image: url("./images/illustration-\ about\ me-\ mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -413,7 +413,7 @@ body {
 }
 
 .finalTextarea::-webkit-resizer {
-  background-image: url(./textareaHandle.svg);
+  background-image: url("./textareaHandle.svg");
   background-repeat: no-repeat;
   background-size: 13px 13px;
   background-position: center;
@@ -517,7 +517,7 @@ tablet
   .tittleContainer {
     margin-top: 0%;
     font-family: 'Inter', sans-serif;
-    background-image: url(/imgdesktopversion/Header-llustration-desktop.svg);
+    background-image: url("./imgdesktopversion/Header-llustration-desktop.svg");
   }
 
   .imgOneMovil {
