change and fix, title of the cards, and change to html.

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ body {
 }
 
 .titleWorkBlue {
+  text-align: center;
   font-family: "inter", sans-serif;
   font-size: 2.5rem;
   color: #172b4d;
