--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
   justify-content: space-between;
 }
 
+.emailError{
+  display: none;
+}
 .bar {
   margin: 0;
   padding: 0;
@@ -1072,7 +1075,7 @@ tablet
   .DesktopPopUp {
     z-index: 50;
     margin: 69px 0% 0% 27%;
-    width: 1798px;
+    width: 100%;
     height: 657px;
   }
 
